# basedbot

./: Cargo.toml
src/: main.rs
