[package]
name = "basedbot"
version = "0.1.0"
authors = ["kageru <kageru@encode.moe>"]
edition = "2021"

[dependencies]
serenity = { version = "0.11", default_features = false, features = ["client", "rustls_backend", "model", "builder", "gateway", "utils", "cache"] }
lazy_static = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
